--- a/frontend/src/project-card/projectCard.module.css
+++ b/frontend/src/project-card/projectCard.module.css
@@ -1,13 +1,14 @@
 .projectCardContainer {
     width: 550px;
-    height: 400px;
-    border: 2px solid ghostwhite;
+    min-height: 400px;
+    border: 2px solid whitesmoke;
     border-radius: 10px;
     display: flex;
     flex-direction: column;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     overflow: hidden;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
+    background-color: #f9f9f9;
 }
 
 .projectCardContainer:hover {
@@ -29,12 +30,14 @@
     width: 100%;
     height: 100%;
     border-radius: 0;
+    cursor: pointer;
 }
 
 .projectCardContent {
     padding: 15px;
     background-color: #f9f9f9;
     flex-grow: 1;
+    text-align: center;
 }
 
 .projectCardTitle {
@@ -54,5 +57,26 @@
 
 .cardImageLink{
     text-decoration: none;
+}
+
+
+.pencilButtonContainer{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+}
+
+.pencilButton{
+    margin-left: auto;
+    height: 30px;
+    width: 30px;
+    cursor: pointer;
+}
+
+.eyeButton{
+    margin-right: auto;
+    height: 30px;
+    width: 30px;
+    cursor: pointer;
 }
 
