--- a/frontend/src/project-card/project-page/projectPage.module.css
+++ b/frontend/src/project-card/project-page/projectPage.module.css
@@ -125,6 +125,12 @@
     padding-bottom: 10%;
 }
 
+.projectPageThirdSectionTitleContainer{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
 .projectPageThirdSectionTitle{
     color: #302D2D;
     font-size: 50px;
@@ -143,25 +149,21 @@
 .projectPageThirdSectionFeatureKnowledgeSection{
     display: flex;
     flex-direction: row;
-    border: 1px solid green;
     height: 70vh;
 }
 
 .projectPageThirdSectionFKleft{
-    border: 1px solid yellow;
     width: 50%;
     display: flex;
-    flex-direction: row;
-    justify-content: center;
+    flex-direction: column;
     height: 100%;
 }
 
 .projectPageThirdSectionFKright{
-    border: 1px solid blue;
     width: 50%;
     display: flex;
-    flex-direction: row;
-    justify-content: center;
+    flex-direction: column;
+    height: 100%;
 }
 
 .projectPageThirdSectionInDepthSummary{
@@ -169,6 +171,16 @@
     width: 100%;
     height: 70vh;
     display: flex;
-    flex-direction: row;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+
+.projectPageFeatureText{
+    color: #302D2D;
+    font-size: 20px;
+    font-family: 'Lora', serif;
+    padding: 0;
+    margin-left: 10%;
+    margin-right: 10%;
 }
