--- a/frontend/src/project-card/projectCard.module.css
+++ b/frontend/src/project-card/projectCard.module.css
@@ -60,10 +60,11 @@
 }
 
 
-.pencilButtonContainer{
+.cardIconsContainer{
     display: flex;
     flex-direction: row;
     width: 100%;
+    justify-content: space-evenly;
 }
 
 .pencilButton{
@@ -73,8 +74,7 @@
     cursor: pointer;
 }
 
-.eyeButton{
-    margin-right: auto;
+.cardIcons{
     height: 30px;
     width: 30px;
     cursor: pointer;
