--- a/frontend/src/navbar/navbar.module.css
+++ b/frontend/src/navbar/navbar.module.css
@@ -8,9 +8,10 @@
     top: 0;
     left: 0;
     z-index: 1000;
-    background-color: rgba(171, 127, 29, 0.3);
+    background-color: #B4D087;
     backdrop-filter: blur(10px);
     border-bottom: 1px solid ghostwhite;
+
 }
 
 .middleLine{
