--- a/frontend/src/navbar/navbar.module.css
+++ b/frontend/src/navbar/navbar.module.css
@@ -21,10 +21,11 @@
 
 .homeTextContainer{
     display: flex;
-    justify-content: center;
     align-items: center;
+    justify-content: space-around;
     width: 40%;
     height: 100%;
+    border: 1px solid red;
 }
 
 .homeTextLink{
@@ -32,7 +33,6 @@
     font-family: 'Lora', serif;
     font-weight: 400;
     text-decoration: none;
-    margin-left: 30%;
     transition: all 0.3s ease;
 }
 
