--- a/frontend/src/homepage/homepage.module.css
+++ b/frontend/src/homepage/homepage.module.css
@@ -71,6 +71,7 @@
     margin-left: auto;
     margin-top: 2%;
     font-family: 'Lora', serif;
+    border: 1px solid red;
 }
 
 .reviewSection {
@@ -109,8 +110,8 @@
 
 .aboutMeSection{
     width: 100%;
-    height: 100vh;
-    background: linear-gradient(135deg, #efea8e, #d6c29f);
+    height: fit-content;
+    background: linear-gradient(135deg, #ec4b64, #d6c29f);
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
@@ -220,4 +221,32 @@
 
 .badgeStyles {
     font-size: 2em;
+}
+
+.innerAboutSection{
+    border: 2px solid yellow;
+    display: flex;
+    flex-direction: row;
+    padding-top: 5%;
+}
+
+.rightSideAbout{
+    width: 50%;
+    height: fit-content;
+    margin-left: auto;
+    margin-top: 2%;
+    font-family: 'Lora', serif;
+    border: 2px solid ghostwhite;
+    border-radius: 10px;
+    background-color: white;
+    padding: 20px;
+    text-align: center;
+    font-size: 1.1rem;
+}
+
+.aboutMeSectionImageContainer{
+    width: 40%;
+    height: 40vh;
+    border-radius: 10px;
+    overflow: hidden;
 }
