--- a/frontend/src/portfolio/portfolio.module.css
+++ b/frontend/src/portfolio/portfolio.module.css
@@ -44,6 +44,7 @@
     justify-content: center;
     align-items: center;
     padding-top: 1%;
+    position: relative;
 }
 
 .myPortfolioText{
@@ -68,11 +69,18 @@
 }
 
 .createProjectButton{
-    width: 120px;
-    height: 30px;
+    width: fit-content;
+    height: fit-content;
     color: white;
     background-color: burlywood;
-    border: 1px solid black;
+    border: 1px solid ghostwhite;
     border-radius: 10px;
     cursor: pointer;
+    position: absolute;
+    font-family: 'Lora', serif;
+    right: -40%;
+}
+
+.createProjectButton:hover{
+    background-color: #ee6363;
 }
