--- a/frontend/src/navbar/navbar.module.css
+++ b/frontend/src/navbar/navbar.module.css
@@ -77,6 +77,9 @@
     width: 30px;
     height: 30px;
     cursor: pointer;
-
+    transition: all 0.3s ease;
 }
 
+.menuIcon:hover {
+    transform: scale(1.2);
+}
