--- a/frontend/src/navbar/modal.module.css
+++ b/frontend/src/navbar/modal.module.css
@@ -13,19 +13,24 @@
 
 .modalContent {
     background: white;
-    padding: 20px;
+    padding: 40px;
     border-radius: 8px;
     position: relative;
-    width: 300px;
-    max-width: 80%;
+    width: 20%;
+    border: 2px solid ghostwhite;
+    display: flex;
+    flex-direction: column;
 }
 
-.closeButton {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    font-size: 20px;
-    background: none;
-    border: none;
-    cursor: pointer;
+.closeButton{
+    width: fit-content;
+    height: fit-content;
+    background-color: #302D2D;
+    color: #b7f3b5;
+    margin-left: auto;
+}
+
+.closeButton:hover{
+    background-color: #b7f3b5;
+    color: #302D2D;
 }
