--- a/frontend/src/navbar/navbar.module.css
+++ b/frontend/src/navbar/navbar.module.css
@@ -2,6 +2,7 @@
     height: 10vh;
     width: 100%;
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-evenly;
     align-items: center;
     position: fixed;
@@ -44,6 +45,7 @@
     align-items: center;
     width: 45%;
     height: 100%;
+    flex-wrap: wrap;
 }
 
 .portfolioTextLink{
