--- a/frontend/src/project-card/projectCard.module.css
+++ b/frontend/src/project-card/projectCard.module.css
@@ -1,6 +1,6 @@
 .projectCardContainer {
-    width: 550px;
-    min-height: 400px;
+    width: 40%;
+    height: fit-content;
     border: 2px solid whitesmoke;
     border-radius: 10px;
     display: flex;
