--- a/frontend/src/navbar/logoutComponent/Logout.module.css
+++ b/frontend/src/navbar/logoutComponent/Logout.module.css
@@ -7,13 +7,9 @@
     border-radius: 5px;
     padding: 7px;
     transition: background-color 0.3s, transform 0.2s;
-    margin-left: 10px;
-    margin-right: 10px;
+    margin: 0px;
 }
 
 .logoutButton:hover {
-    background-color: white;
-    color: black;
-    border: 2px solid black;
-    transform: scale(1.05);
+    background-color: black;
 }
