--- a/frontend/src/navbar/navbar.module.css
+++ b/frontend/src/navbar/navbar.module.css
@@ -14,9 +14,24 @@
     border-bottom: 1px solid ghostwhite;
 }
 
+@media (max-width: 500px) {
+    .navbarContainer {
+        height: 15vh;
+        align-items: flex-start;
+        justify-content: flex-start;
+        flex-direction: column;
+    }
+}
+
 .middleLine{
     border: 1px solid black;
     height: 60%;
+}
+
+@media screen and (max-width: 500px) {
+    .middleLine {
+        display: none;
+    }
 }
 
 .homeTextContainer{
@@ -25,6 +40,13 @@
     justify-content: space-around;
     width: 45%;
     height: 100%;
+    border: 1px solid red;
+}
+
+@media screen and (max-width: 500px) {
+    .homeTextContainer {
+        display: none;
+    }
 }
 
 .homeTextLink{
@@ -33,6 +55,12 @@
     font-weight: 400;
     text-decoration: none;
     transition: all 0.3s ease;
+}
+
+@media (max-width: 500px) {
+    .homeTextLink {
+        font-size: 10px;
+    }
 }
 
 .homeTextLink:hover {
@@ -46,6 +74,13 @@
     width: 45%;
     height: 100%;
     flex-wrap: wrap;
+    border: 1px solid green;
+}
+
+@media screen and (max-width: 500px) {
+    .portfolioTextContainer {
+        display: none;
+    }
 }
 
 .portfolioTextLink{
@@ -67,6 +102,8 @@
     margin-right: 10%;
     align-items: center;
     gap: 20px;
+    border: 1px solid red;
+    cursor: pointer;
 }
 
 .profileTextStyles{
@@ -84,4 +121,49 @@
 
 .menuIcon:hover {
     transform: scale(1.2);
+}
+
+@media (max-width: 500px) {
+    .cardIcons {
+        height: 25px;
+        width: 25px;
+    }
+}
+
+.screenLess500 {
+    display: none;
+}
+
+@media screen and (max-width: 500px) {
+    .screenLess500 {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        height: 100%;
+    }
+}
+
+.firstRowL500{
+    border: 1px solid red;
+    width: 100%;
+    height: 50%;
+}
+
+.secondRowL500{
+    border: 1px solid red;
+    width: 100%;
+    height: 50%;
+}
+
+
+.dropdown {
+    position: absolute;
+    top: 100%;
+    right: 100px;
+    background-color: white;
+    border: 1px solid #ccc;
+    z-index: 1000;
+    border-radius: 0.5rem;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+    padding: 20px 30px;
 }
