--- a/frontend/src/project-card/projectCard.module.css
+++ b/frontend/src/project-card/projectCard.module.css
@@ -11,6 +11,13 @@
     background-color: #f9f9f9;
 }
 
+@media (max-width: 750px) {
+    .projectCardContainer {
+        width: 90%;
+    }
+
+}
+
 .projectCardContainer:hover {
     transform: scale(1.05);
     box-shadow: 0 6px 15px rgba(0, 0, 0, 0.2);
@@ -41,12 +48,18 @@
 }
 
 .projectCardTitle {
-    font-size: 1.4em;
+    font-size: 25px;
     font-weight: bold;
     margin-bottom: 10px;
     display: flex;
     justify-content: center;
     font-family: 'Lora', serif;
+}
+
+@media (max-width: 500px) {
+    .projectCardTitle {
+        font-size: 20px;
+    }
 }
 
 .projectCardDescription {
@@ -78,5 +91,12 @@
     height: 30px;
     width: 30px;
     cursor: pointer;
+}
+
+@media (max-width: 500px) {
+    .cardIcons {
+        height: 25px;
+        width: 25px;
+    }
 }
 
