--- a/frontend/src/homepage/homepage.module.css
+++ b/frontend/src/homepage/homepage.module.css
@@ -1,3 +1,34 @@
+.overlay {
+    position: fixed;
+    top: 5%;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 999;
+}
+
+.overlayContent {
+    background-color: white;
+    padding: 2rem 3rem;
+    border-radius: 1rem;
+    font-size: 1.5rem;
+    border: 1px solid yellow;
+    width: 30%;
+    max-height: 70vh;
+    overflow-y: auto;
+}
+
+.overlayContentButtonsRow{
+    display: flex;
+    flex-direction: row;
+    gap: 30%;
+}
+
+
 .heroContainer {
     position: relative;
     width: 100%;
@@ -81,6 +112,7 @@
     flex-direction: column;
     align-items: center;
     padding: 2rem 2rem 10%;
+    overflow: hidden;
 }
 
 .hobbySection {
@@ -92,6 +124,7 @@
     flex-direction: column;
     align-items: center;
     padding: 2rem 2rem 10%;
+    overflow: hidden;
 }
 
 .skillSection{
@@ -115,6 +148,8 @@
     flex-direction: column;
     align-items: center;
     padding: 2rem 2rem 10%;
+    border: 1px solid red;
+    overflow: hidden;
 }
 
 
@@ -247,6 +282,21 @@
     overflow: hidden;
 }
 
+.aboutMeSectionPencil{
+    position: absolute;
+    cursor: pointer;
+    transition: transform 0.2s ease;
+    padding: 10px;
+    background-color: white;
+    border-radius: 8px;
+    right: 0;
+    margin-right: 2%;
+}
+
+.aboutMeSectionPencil:hover{
+    transform: scale(1.2);
+}
+
 .skillsFirstRow{
     display: flex;
     width: 100%;
@@ -281,6 +331,7 @@
     padding-right: 150px;
     padding-left: 150px;
     gap: 20px;
+    border: 1px solid green;
 }
 
 .skillsTitleContainer{
@@ -357,6 +408,7 @@
     display: flex;
     flex-direction: row;
     position: relative;
+    border: 1px solid red;
 }
 
 .skillsLeftIconsContainerNumericalValue{
