--- a/frontend/src/journey/journey.module.css
+++ b/frontend/src/journey/journey.module.css
@@ -1,13 +1,14 @@
 .container {
-    padding: 20px;
-    margin: 100px auto;
+    margin-top: 4%;
     text-align: center;
-    background-color: #b7f3b5;
+    background: linear-gradient(135deg, #b28eef, #d6c29f);
     width: 100%;
-    height: 100vh;
+    height: fit-content;
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding-top: 5%;
+    padding-bottom: 8%;
 }
 
 h1 {
@@ -15,6 +16,7 @@ h1 {
     margin-bottom: 20px;
     color: #302D2D;
     font-family: 'Lora', serif;
+    padding-bottom: 2%;
 }
 
 .school {
@@ -30,8 +32,10 @@ h1 {
 h2 {
     font-size: 1.5rem;
     color: #007bff;
+    font-family: 'Lora', serif;
 }
 
 p {
     margin: 5px 0;
+    font-family: 'Lora', serif;
 }
