--- a/frontend/src/navbar/navbar.module.css
+++ b/frontend/src/navbar/navbar.module.css
@@ -40,7 +40,6 @@
     justify-content: space-around;
     width: 45%;
     height: 100%;
-    border: 1px solid red;
 }
 
 @media screen and (max-width: 500px) {
@@ -74,7 +73,6 @@
     width: 45%;
     height: 100%;
     flex-wrap: wrap;
-    border: 1px solid green;
 }
 
 @media screen and (max-width: 500px) {
@@ -102,7 +100,6 @@
     margin-right: 10%;
     align-items: center;
     gap: 20px;
-    border: 1px solid red;
     cursor: pointer;
 }
 
@@ -144,13 +141,11 @@
 }
 
 .firstRowL500{
-    border: 1px solid red;
     width: 100%;
     height: 50%;
 }
 
 .secondRowL500{
-    border: 1px solid red;
     width: 100%;
     height: 50%;
 }
@@ -159,7 +154,7 @@
 .dropdown {
     position: absolute;
     top: 100%;
-    right: 100px;
+    right: 17%;
     background-color: white;
     border: 1px solid #ccc;
     z-index: 1000;
